@@ -1,5 +1,5 @@
 
-/* Copyright (c) 2011-2012, Stefan Eilemann <eile@eyescale.ch>
+/* Copyright (c) 2011-2013, Stefan Eilemann <eile@eyescale.ch>
  *
  * This file is part of Collage <https://github.com/Eyescale/Collage>
  *
@@ -54,9 +54,12 @@ inline void gatherConnections( const Nodes& nodes, Connections& result )
     for( Nodes::const_iterator i = nodes.begin(); i != nodes.end(); ++i )
     {
         NodePtr node = *i;
-        ConnectionPtr connection = node->useMulticast();
+        ConnectionPtr connection = node->getConnection( true /* preferMC */);
+        LBASSERT( connection );
+        if( !connection )
+            continue;
 
-        if( connection )
+        if( connection->isMulticast( ))
         {
             ConstConnectionDescriptionPtr desc = connection->getDescription();
             if( mcSet.find( desc ) != mcSet.end( )) // already added
@@ -73,16 +76,12 @@ inline void gatherConnections( const Nodes& nodes, Connections& result )
             mcSet.insert( desc ); // mark as added
             mcNodes.erase( j );
         }
-        else
-            connection = node->getConnection();
 
-        LBASSERT( connection.isValid( ));
-        if( connection.isValid( ))
-            result.push_back( connection );
+        result.push_back( connection );
     }
 
     // Add unicast connections for multicast node connections seen only once
-    for( MCNodes::const_iterator i = mcNodes.begin(); i != mcNodes.end(); ++i )
+    for( MCNodes::iterator i = mcNodes.begin(); i != mcNodes.end(); ++i )
     {
         ConnectionPtr connection = i->second->getConnection();
         LBASSERT( connection.isValid( ));
